--- a/index.html
+++ b/index.html
@@ -1,21 +1,73 @@
+
 <!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>github.io</title>
-<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<script src="//cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
-<script src="//cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script type="text/javascript">
-$(document).ready(function(){
-});
-</script>
-</head>
-<body>
-<center style="margin-top:100px;">
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/favicon.ico">
 
-test
+    <title>迷迷云加速 - Mecloud</title>
 
-</center>
-</body>
+    <!-- Bootstrap core CSS -->
+    <link href="/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="/cover.css" rel="stylesheet">
+	
+	<style>
+	.xjhImg{width:100%;height:100vh;background-repeat:no-repeat; background-attachment:fixed;background-size:cover;background-image: url(/bg.jpg);}
+	</style>
+  </head>
+
+  <body class="text-center">
+	<div style1="background-color:black;">
+	<div class="xjhImg" style="opacity:0.95;">
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto">
+        <div class="inner">
+          <h1 class="masthead-brand">MeCloud</h1>
+          <h5 class="masthead-brand">网络加速</h5>
+		  <!--
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link active" href="#">One</a>
+            <a class="nav-link" href="#">Two</a>
+            <a class="nav-link" href="#">Three</a>
+          </nav>
+		  -->
+        </div>
+      </header>
+
+      <main role="main" class="inner cover">
+        <h2 class="cover-heading">请收藏本页面</h2>
+		<div style="margin-top:2em;"></div>
+        <p class="lead">主站域名被污染不能访问时，本页面会更新最新域名，使用最新域名即可正常访问。</p>
+        <p class="lead">
+          <a href="https://www.mecloud.cc/?github.io" class="btn btn-success">点击最新域名 www.mecloud.cc</a>
+        </p>
+		<p class="lead">
+          <a href="https://www.mimi.ooo/?github.io" class="btn btn-primary">永久域名（需梯） www.mimi.ooo</a>
+        </p>
+      </main>
+	  
+
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <p>Cover template for Bootstrap, by @mdo.</p>
+        </div>
+      </footer>
+    </div>
+	</div>
+	</div>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="/snow.js"></script>
+    <script src="/popper.min.js"></script>
+    <script src="/bootstrap.min.js"></script>
+  </body>
 </html>
