--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 		<div style="margin-top:2em;"></div>
         <p class="lead">主站域名被污染不能访问时，本页面会更新最新域名，使用最新域名即可正常访问。</p>
         <p class="lead">
-          <a href="https://www.mecloud.cc/?github.io" class="btn btn-success">点击最新域名 www.mecloud.cc</a>
+          <a href="https://www.mecloud.cc/?git" class="btn btn-success">点击最新域名 www.mecloud.cc</a>
         </p>
 		<p class="lead">
-          <a href="https://www.mimi.ooo/?github.io" class="btn btn-primary">永久域名（需梯） www.mimi.ooo</a>
+          <a href="https://www.mimi.ooo/?git" class="btn btn-primary">永久域名（需梯） www.mimi.ooo</a>
         </p>
       </main>
 	  
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p>Cover template for Bootstrap, by @mdo.</p>
+          <p>This template for Bootstrap, by @mdo.</p>
         </div>
       </footer>
     </div>
@@ -65,8 +65,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="/snow.js"></script>
+    <script src="/jquery-3.2.1.slim.min.js"></script>
     <script src="/popper.min.js"></script>
     <script src="/bootstrap.min.js"></script>
   </body>
