--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>迷迷云加速 - Mecloud</title>
-    <!-- Bootstrap core CSS -->
     <link href="/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
     <link href="/cover.css" rel="stylesheet">
-	<script>
-	alert(GetUrlParam("tdsourcetag"));
+	<script src="//cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+	<script type="text/javascript">
+	$(document).ready(function(){
+		var newDomain = "https://www.mecloud.cc"
+		
+		var para = GetUrlParam("tdsourcetag");
+		if(para != ''){
+			location.href = newDomain;
+		}else{
+			$("#newDomain").attr("href",newDomain);
+			$("#newDomainText").text(newDomain);
+		}
+	});
+	
+	
 	
 	//paraName 等找参数的名称
 　　function GetUrlParam(paraName) {
@@ -63,11 +74,11 @@
         <h2 class="cover-heading">请收藏本页面</h2>
 		<div style="margin-top:2em;"></div>
         <p class="lead">主站域名被污染不能访问时，本页面会更新最新域名，使用最新域名即可正常访问。</p>
-        <p class="lead">
-          <a href="https://www.mecloud.cc/?git" class="btn btn-success">点击最新域名 www.mecloud.cc</a>
+        <p class="lead" >
+          <a id="newDomain" href="#" class="btn btn-success">访问最新域名 <ssr id="newDomainText">#</ssr></a>
         </p>
 		<p class="lead">
-          <a href="https://www.mimi.ooo/?git" class="btn btn-primary">永久域名（需梯） www.mimi.ooo</a>
+          <a id="oldDomain" href="https://www.mimi.ooo/?git" class="btn btn-primary">永久域名(需梯) https://www.mimi.ooo</a>
         </p>
       </main>
 	  
