--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>迷迷云加速 - Mecloud</title>
     <link href="/bootstrap.min.css" rel="stylesheet">
     <link href="/cover.css" rel="stylesheet">
-	<script src="//cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+	<script src="/jquery.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
 		var newDomain = "https://www.mecloud.cc"
