--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
       </header>
 
       <main role="main" class="inner cover">
-        <h2 class="cover-heading">请收藏本页面</h2>
+		<h2 class="cover-heading">请收藏本页面</h2>
+		
 		<div style="margin-top:2em;"></div>
-        <p class="lead">主站域名被污染不能访问时，本页面会更新最新域名，使用最新域名即可正常访问。</p>
-        <p class="lead" >
-          <a id="newDomain" href="#" class="btn btn-success">访问最新域名 <ssr id="newDomainText">#</ssr></a>
+        <p class="lead">主站域名被污染不能访问时，当前页面会更新最新域名，以便萌新可以正常访问。</p>
+        <p class="lead" style="margin-top:2em;">
+          <a id="newDomain" href="#" class="btn btn-success">进入最新域名 <ssr id="newDomainText">#</ssr></a>
         </p>
-		<p class="lead">
+		
+		<p class="lead" style="margin-top:1em;">
           <a id="oldDomain" href="https://www.mimi.ooo/?git" class="btn btn-primary">永久域名(需梯) https://www.mimi.ooo</a>
         </p>
       </main>
