--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@
           <a id="newDomain" href="#" class="btn btn-success">进入最新域名 <ssr id="newDomainText">#</ssr></a>
         </p>
 		
-		<p class="lead" style="margin-top:1em;">
+	<p class="lead" style="margin-top:1em;">
           <a id="oldDomain" href="https://www.mimi.ooo/?git" class="btn btn-primary">永久域名(需梯) https://www.mimi.ooo</a>
+        </p>
+		
+	<p class="lead" style="margin-top:1em;">
+          <a id="infos" href="https://t.me/s/mimi_info" target="_blank" class="btn btn-info">最新优惠码/Telegram公告</a>
         </p>
       </main>
 	  
