--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>迷迷云加速 - Mecloud</title>
+    <title>MeCloud</title>
     <link href="/bootstrap.min.css" rel="stylesheet">
     <link href="/cover.css" rel="stylesheet">
 	<script src="/jquery.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
-		var newDomain = "https://www.mecloud.cc"
+		var newDomain = "https://www.mecloud.fun"
 		
 		var para = GetUrlParam("tdsourcetag");
 		$("#newDomain").attr("href",newDomain);
