--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	
 	
 	
-	//paraName 等找参数的名称
+	//paraName
 　　function GetUrlParam(paraName) {
 　　　　var url = document.location.toString();
 　　　　var arrObj = url.split("?");
@@ -80,6 +80,7 @@
 		
 		<div style="margin-top:2em;"></div>
         <p class="lead">主站域名被污染不能访问时，当前页面会更新最新域名，以便萌新可以正常访问。</p>
+	<p class="lead">更新时间：2019年10月18日 00:10:59</p>
         <p class="lead" style="margin-top:2em;">
           <a id="newDomain" href="#" class="btn btn-success">进入最新域名 <ssr id="newDomainText">#</ssr></a>
         </p>
