--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="/jquery.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
-		var newDomain = "https://www.mecloud.fun"
+		var newDomain = "https://www.mecloud.top"
 		
 		var para = GetUrlParam("tdsourcetag");
 		$("#newDomain").attr("href",newDomain);
