--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 		
 		<div style="margin-top:2em;"></div>
         <p class="lead">主站域名被污染不能访问时，当前页面会更新最新域名，以便萌新可以正常访问。</p>
-	<p class="lead">更新时间：2020年2月19日 13:12:26/p>
+	<p class="lead">更新时间：2020年2月19日 13:12:26
+	</p>
         <p class="lead" style="margin-top:2em;">
           <a id="newDomain" href="#" class="btn btn-success">进入最新域名 <ssr id="newDomainText">#</ssr></a>
         </p>
