--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </header>
 
       <main role="main" class="inner cover">
-		<h2 class="cover-heading">请收藏本页面</h2>
+		<h2 class="cover-heading">请收藏本页面！</h2>
 		
 		<div style="margin-top:2em;"></div>
         <p class="lead">主站域名被污染不能访问时，当前页面会更新最新域名，以便萌新可以正常访问。</p>
