--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <header class="masthead mb-auto">
         <div class="inner">
           <h1 class="masthead-brand">MeCloud</h1>
-          <h5 class="masthead-brand">网络加速</h5>
+          <h5 class="masthead-brand"></h5>
 		  <!--
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">One</a>
@@ -79,20 +79,17 @@
 		<h2 class="cover-heading">请收藏本页面！</h2>
 		
 		<div style="margin-top:2em;"></div>
-        <p class="lead">主站域名被污染不能访问时，当前页面会更新最新域名，以便萌新可以正常访问。</p>
+        <p class="lead">主站无法访问时，当前页面会更新最新地址，以正常访问。</p>
 	<p class="lead">更新时间：2020年2月19日 13:12:26
 	</p>
         <p class="lead" style="margin-top:2em;">
-          <a id="newDomain" href="#" class="btn btn-success">进入最新域名 <ssr id="newDomainText">#</ssr></a>
+          <a id="newDomain" href="#" class="btn btn-success">最新地址 <ssr id="newDomainText">#</ssr></a>
         </p>
 		
 	<p class="lead" style="margin-top:1em;">
-          <a id="oldDomain" href="https://www.mimi.ooo/?git" class="btn btn-primary">永久域名(需梯) https://www.mimi.ooo</a>
+          <a id="oldDomain" href="https://www.mimi.ooo/?git" class="btn btn-primary">永久地址 https://www.mimi.ooo</a>
         </p>
 		
-	<p class="lead" style="margin-top:1em;">
-          <a id="infos" href="https://t.me/s/mimi_info" target="_blank" class="btn btn-info">最新优惠码/Telegram公告 (自备扶梯)</a>
-        </p>
       </main>
 	  
 
