--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>MeCloud</title>
+    <title></title>
     <link href="/bootstrap.min.css" rel="stylesheet">
     <link href="/cover.css" rel="stylesheet">
 	<script src="/jquery.min.js"></script>
@@ -76,17 +76,12 @@
       </header>
 
       <main role="main" class="inner cover">
-		<h2 class="cover-heading">请收藏本页面！</h2>
 		
 		<div style="margin-top:2em;"></div>
-        <p class="lead">主站无法访问时，当前页面会更新最新地址，以正常访问。</p>
+        <p class="lead"></p>
 	</p>
         <p class="lead" style="margin-top:2em;">
-          <a id="newDomain" href="#" class="btn btn-success">最新地址 <ssr id="newDomainText">#</ssr></a>
-        </p>
-		
-	<p class="lead" style="margin-top:1em;">
-          <a id="oldDomain" href="https://www.mimi.ooo/?git" class="btn btn-primary">永久地址 https://www.mimi.ooo</a>
+          <a id="newDomain" href="#" class="btn btn-success">GO <ssr id="newDomainText">#</ssr></a>
         </p>
 		
       </main>
@@ -94,7 +89,7 @@
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p>This template for Bootstrap, by @mdo.</p>
+          <p></p>
         </div>
       </footer>
     </div>
