--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p></p>
+          <p style="with:200px;"></p>
         </div>
       </footer>
     </div>
