--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <p class="lead"></p>
 	</p>
         <p class="lead" style="margin-top:2em;">
-          <a id="newDomain" href="#" class="btn btn-success">GO <ssr id="newDomainText">#</ssr></a>
+          <a id="newDomain" href="#" class="btn btn-success">LET'S GO <ssr id="newDomainText">#</ssr></a>
         </p>
 		
       </main>
