--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title></title>
+    <meta name="keywords" content="迷迷云加速,mecloud" />
+    <title>Mecloud - 迷迷云加速</title>
     <link href="/bootstrap.min.css" rel="stylesheet">
     <link href="/cover.css" rel="stylesheet">
 	<script src="/jquery.min.js"></script>
