--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="迷迷云加速,mecloud" />
     <title>Mecloud - 迷迷云加速</title>
     <link href="/bootstrap.min.css" rel="stylesheet">
-    <link href="/cover.css" rel="stylesheet">
+    <link href="/cover1.css" rel="stylesheet">
 	<script src="/jquery.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
