--- a/index.html
+++ b/index.html
@@ -52,9 +52,321 @@
 　　}
 	</script>
 	
+	  
+	  
 	<style>
-	.xjhImg{width:100%;height:100vh;background-repeat:no-repeat; background-attachment:fixed;background-size:cover;background-image: url(/bg.jpg);}
-	</style>
+   
+@font-face { 
+	font-family: title-speed;
+	src: url('/fonts/LobsterTwo-Regular.otf');
+} 
+   
+.navbar-brand{
+  font-family: title-speed;
+  font-size: 1.2rem;
+  font-weight: 500;
+  
+ }
+
+body {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
+  
+  }
+ 
+#intro {
+  background: url("https://img.xjh.me/random_img.php?type=bg&ctype=nature&return=302") no-repeat center center;
+  background-size: cover;
+}
+
+
+#intro .h6 {
+  font-weight: 300;
+  line-height: 1.7;
+}
+
+.hm-gradient .full-bg-img {
+  background: rgba(0, 0, 0, 0.2);
+  /** 456
+  background: linear-gradient(45deg, rgba(42, 27, 161, 0.7), rgba(29, 210, 177, 0.7) 100%);
+  */
+  /** 迷改色
+  background: linear-gradient(45deg, rgba(101, 99, 115, 0.2), rgba(10, 115, 96, 0.20) 100%);
+   */
+}
+
+@media (max-width: 450px) {
+  .margins {
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
+}
+
+#pricing .lead {
+  opacity: 0.7;
+}
+
+#pricing .card-image {
+  background: url("/img/login.jpeg") no-repeat center center;
+}
+
+#pricing ul li {
+  font-size: 1.1em;
+}
+  
+.text-white {
+	color: #fff !important;
+}
+  
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+ }
+  
+
+  .align-items-center {
+    -webkit-box-align: center!important;
+    -ms-flex-align: center!important;
+    align-items: center!important;
+  }
+  
+  .d-flex {
+    display: -webkit-box!important;
+    display: -ms-flexbox!important;
+    display: flex!important;
+  }
+  
+  
+@media (min-width: 992px) {
+  .col-lg-6 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+ .col-lg-4 {
+	-webkit-box-flex: 0;
+	-ms-flex: 0 0 33.333333%;
+	flex: 0 0 33.333333%;
+	max-width: 33.333333%;
+}
+}
+  
+@media (min-width: 1200px) {
+.col-xl-5 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 41.666667%;
+    flex: 0 0 41.666667%;
+    max-width: 41.666667%;
+}
+
+.col-xl-7 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 58.333333%;
+    flex: 0 0 58.333333%;
+    max-width: 58.333333%;
+}
+    
+.pr-lg-5, .px-lg-5 {
+    padding-right: 3rem !important;
+}
+    
+}
+  
+.col-1 {
+	-webkit-box-flex: 0;
+	-ms-flex: 0 0 8.333333%;
+	flex: 0 0 8.333333%;
+	max-width: 8.333333%;
+  padding-right: 15px;
+padding-left: 15px;
+}
+ 
+.col-10 {
+	-webkit-box-flex: 0;
+	-ms-flex: 0 0 83.333333%;
+	flex: 0 0 83.333333%;
+	max-width: 83.333333%;
+  padding-right: 15px;
+padding-left: 15px;
+}
+
+.col-md-12 {
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+  
+  }
+
+.lead {
+    font-size: 1.25rem;
+    font-weight: 300;
+}
+
+.h1 {
+    font-size: 2.5rem; 
+ }
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    margin-bottom: .5rem;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.2;
+    color: inherit;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: .5rem;
+}
+
+.h5, h5 {
+    font-size: 1.25rem;
+}
+
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+  
+.card-body {
+	-webkit-box-flex: 1;
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
+	padding: 1.25rem;
+}
+
+sup {
+    top: -.5em;
+}
+sub, sup {
+    position: relative;
+    font-size: 75%;
+    line-height: 0;
+    vertical-align: baseline;
+}
+  
+.rounded {
+    border-radius: .25rem !important;
+}
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+img {
+    vertical-align: middle;
+    border-style: none;
+}
+
+.no-gutters{
+	 margin-right: 0px; 
+	 margin-left:  0px; 
+}
+@font-face{
+    font-family:anticon;
+    src:url("https://at.alicdn.com/t/font_zck90zmlh7hf47vi.eot");
+    src:url("https://at.alicdn.com/t/font_zck90zmlh7hf47vi.eot?#iefix") format("embedded-opentype"),url("https://at.alicdn.com/t/font_zck90zmlh7hf47vi.woff") format("woff"),url("https://at.alicdn.com/t/font_zck90zmlh7hf47vi.ttf") format("truetype"),url("https://at.alicdn.com/t/font_zck90zmlh7hf47vi.svg#iconfont") format("svg")
+}
+
+.anticon-down::before {
+	content: "\E61D";
+}
+  
+.anticon::before {
+    display: block;
+    font-family: anticon !important;
+}
+
+.anticon {
+	display: inline-block;
+	font-style: normal;
+	vertical-align: baseline;
+	text-align: center;
+	text-transform: none;
+	line-height: 1;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+  
+.banner0-icon {
+	bottom: 20px;
+	font-size: 24px;
+	position: absolute;
+	left: 50%;
+	margin-left: -12px;
+	color: #fff;
+}
+  
+@-moz-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -moz-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -moz-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -moz-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -moz-transform: translateY(-15px);
+    -ms-transform: translateY(-15px);
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+.bounce {
+  -moz-animation: bounce 3s infinite;
+  -webkit-animation: bounce 3s infinite;
+  animation: bounce 3s infinite;
+}
+
+  
+</style>
+	  
+	  
   </head>
 
   <body class="text-center">
