--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="keywords" content="迷迷云加速,mecloud" />
     <title>Mecloud - 迷迷云加速</title>
     <link href="/bootstrap.min.css" rel="stylesheet">
-    <link href="/cover1.css" rel="stylesheet">
 	<script src="/jquery.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
@@ -415,5 +414,6 @@ img {
     <script src="/jquery-3.2.1.slim.min.js"></script>
     <script src="/popper.min.js"></script>
     <script src="/bootstrap.min.js"></script>
+<script src="/snow.js"></script>
   </body>
 </html>
