--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="https://cdn.bootcss.com/jquery/3.5.0/jquery.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
-		var newDomain = "https://www.mecloud.live"
+		var newDomain = "https://www.mecloud.icu"
 		
 		var para = GetUrlParam("tdsourcetag");
 		$("#newDomain").attr("href",newDomain);
